--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ CHROMA_PATH = "data/chroma"
 BATCH_SIZE = 1000
 RAW_DATA_PATH= 'data/data_base.csv'
 FEATURES= ['part', 'marque', 'description']
-DATA_PATH_CSV= 'data/first_1000_lines.csv'
+DATA_PATH_CSV= 'data/test.csv'
 DATA_PATH_TXT= 'data/sample_db.txt'
 COLLECTION_TXT= 'txt_collection'
 COLLECTION_CSV= 'csv_collection'
