--- a/src/model/requirements.txt
+++ b/src/model/requirements.txt
@@ -108,6 +108,11 @@ pydantic_core==2.20.1
 pydeck==0.9.1
 Pygments==2.18.0
 PyPika==0.48.9
+pylint==3.2.6
+PyMuPDF==1.24.9
+pymupdf4llm==0.0.10
+PyMuPDFb==1.24.9
+pyparsing==3.1.2
 pyproject_hooks==1.1.0
 pyreadline3==3.4.1
 pytesseract==0.3.10
