--- a/src/model/requirements.txt
+++ b/src/model/requirements.txt
@@ -122,6 +122,7 @@ python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
 pywin32==306;platform_system == "Windows"
+# pywin32==306  # Uncomment this line if a compatible version is available
 PyYAML==6.0.1
 qdrant-client==1.10.1
 referencing==0.35.1
