--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ DATA_PATH_CSV= 'data/test.csv'
 DATA_PATH_TXT= 'data/sample_db.txt'
 COLLECTION_TXT= 'txt_collection'
 COLLECTION_CSV= 'csv_collection'
-openAi8key = "secret key"
+openAi8key 
