--- a/src/model/requirements.txt
+++ b/src/model/requirements.txt
@@ -64,6 +64,7 @@ langchain-core==0.2.24
 langchain-groq==0.1.6
 langchain-huggingface==0.0.3
 langchain-ollama==0.1.0
+langchain-openai==0.1.22
 langchain-qdrant==0.1.3
 langchain-text-splitters==0.2.2
 langsmith==0.1.93
@@ -82,7 +83,9 @@ numpy==1.26.4
 oauthlib==3.2.2
 ollama==0.3.0
 onnxruntime>=1.18.0,<1.19.0
-opentelemetry-proto>=1.26.0,<1.27.0
+openai==1.41.1
+opencv-python-headless==4.10.0.84
+opentelemetry-api==1.26.0
 opentelemetry-exporter-otlp-proto-common==1.26.0
 opentelemetry-exporter-otlp-proto-grpc==1.26.0
 opentelemetry-instrumentation==0.47b0
