--- a/.env
+++ b/.env
@@ -1,10 +1,7 @@
-API_TOKEN='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'
+HF_API='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'
 GROQ_TOKEN='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'
-CHROMA_PATH = "data/chroma"
-BATCH_SIZE = 1000
-RAW_DATA_PATH= 'data/data_base.csv'
-FEATURES= ['part', 'marque', 'description']
-DATA_PATH_CSV= 'data/test.csv'
-DATA_PATH_TXT= 'data/sample_db.txt'
-COLLECTION_TXT= 'txt_collection'
-COLLECTION_CSV= 'csv_collection'
+openAi8key=
+QDRANT_URL= "https://a08399e1-9b23-417d-bc6a-88caa066bca4.us-east4-0.gcp.cloud.qdrant.io"
+QDRANT_API= "lJo8SY8JQy7W0KftZqO3nw11gYCWIaJ0mmjcjQ9nFhzFiVamf3k6XA"
+MBD_MODEL= "text-embedding-3-large"
+COHERE_API_KEY="weyxiNeVkznwJueXMTuj9Mu7JtwTDf5nMfgPA8XF"
